--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,15 +2,13 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, font-src 'self'">
         <title>Test Social Login</title>
     </head>
     <body>
         <!-- 카카오 로그인 -->
        <H1>카카오 로그인</H1>
-       <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-       <script>
-     
-       </script>
+       <a href="/auth/kakao">카카오 로그인</a>
+      <a href="/auth/kakao/user_info">카카오 정보</a>
     </body>
 </html>
