--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,6 @@
     <!-- 카카오 로그인 -->
     <H1>카카오 로그인</H1>
     <a href="/oauth/kakao">카카오 로그인</a>
-    <a href="/oauth/kakao/user_info">카카오 정보</a>
+    <a href="/oauth/kakao/unlink">연결 끊기</a>
   </body>
 </html>
