--- a/views/account_profile.html
+++ b/views/account_profile.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <!-- 카카오 로그인 -->
-    <h1>카카오 로그인</h1>
-    <a href="/oauth/kakao">카카오 로그인</a>
-    <a href="/oauth/kakao/account_info">오도짜세프로필</a>
-    <a href="/oauth/kakao/logout">로그아웃</a>
-    <a href="/oauth/kakao/unlink">인증 삭제</a>
+    <h1>카카오 프로필</h1>
+    <article>
+      <div><h2><%= nickname %></h2></div>
+      <img src="<%= profile_image %>"></img>
+    </article>
   </body>
 </html>
