구글로그인 구현중

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,10 +10,17 @@
   </head>
   <body>
     <!-- 카카오 로그인 -->
-    <H1>카카오 로그인</H1>
-    <a href="/oauth/kakao">카카오 로그인</a>
-    <a href="/oauth/kakao/account_info">프로필</a>
-    <a href="/oauth/kakao/logout">로그아웃</a>
-    <a href="/oauth/kakao/unlink">인증 삭제</a>
+    <div>
+      <H1>카카오 로그인</H1>
+      <a href="/oauth/kakao">카카오 로그인</a>
+      <a href="/oauth/kakao/account_info">프로필</a>
+      <a href="/oauth/kakao/logout">로그아웃</a>
+      <a href="/oauth/kakao/unlink">인증 삭제</a>
+    </div>
+    <div>
+      <H1>구글 로그인</H1>
+      <a href="/oauth/google">구글 로그인</a>
+      <script src="https://accounts.google.com/gsi/client" async defer></script>
+    </div>
   </body>
 </html>
