구글 로그인 성공

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,6 +20,7 @@
     <div>
       <H1>구글 로그인</H1>
       <a href="/oauth/google">구글 로그인</a>
+      <a href="/oauth/google/account_info">구글 프로필</a>
       <script src="https://accounts.google.com/gsi/client" async defer></script>
     </div>
   </body>
