switch 소셜로그인 전환

--- a/views/pages/account_profile.ejs
+++ b/views/pages/account_profile.ejs
@@ -10,10 +10,11 @@
   </head>
   <body>
     <!-- 카카오 로그인 -->
-    <h1>카카오 프로필</h1>
+  
+    <h1>구글 프로필</h1>
     <article>
-      <div><h2><%= nickname %></h2></div>
-      <img src="<%= profile_image %>"></img>
+      <div><h2><%= accounts_info.name %></h2></div>
+      <img src="<%= accounts_info.picture %>"></img>
     </article>
   </body>
 </html>
