--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -26,5 +26,10 @@
       <a href="/oauth/google/logout">구글 로그아웃</a>
       <script src="https://accounts.google.com/gsi/client" async defer></script>
     </div>
+    <div>
+      <H1>게시글</H1>
+      <a href="/post/list">게시글 리스트</a>
+      <a href="/post/write">글 작성하기</a>
+    </div>
   </body>
 </html>
