--- a/views/pages/post_write.ejs
+++ b/views/pages/post_write.ejs
@@ -5,9 +5,9 @@
   </head>
   <body>
     <h2>게시글 작성</h2>
-    <form action="" method="post">
-      작성자: <input type="text" name="id" /><br />
-      제목: <input type="text" name="id" /><br />
+    <form action="/post/write_post" method="post">
+      작성자: <input type="text" name="username" /><br />
+      제목: <input type="text" name="title" /><br />
       내용: <textarea name="content"></textarea><br />
       <button type="submit">글쓰기</button>
     </form>
