소셜로그인 테스트A

--- a/views/pages/account_profile.ejs
+++ b/views/pages/account_profile.ejs
@@ -9,9 +9,8 @@
     <title>Test Social Login</title>
   </head>
   <body>
-    <!-- 카카오 로그인 -->
-  
-    <h1>구글 프로필</h1>
+ 
+    <h1>프로필 프로필</h1>
     <article>
       <div><h2><%= accounts_info.name %></h2></div>
       <img src="<%= accounts_info.picture %>"></img>
