--- a/views/pages/post_list.ejs
+++ b/views/pages/post_list.ejs
@@ -9,7 +9,8 @@
       <colgroup>
         <col width="50" />
         <col width="200" />
-        <col width="100" />
+        <col width="100" />+
+        
       </colgroup>
       <thead>
         <tr>
