--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,17 +14,18 @@
       <H1>카카오 로그인</H1>
       <!-- {% if %} -->
       <a href="/oauth/kakao">카카오 로그인</a>
-      <a href="/oauth/kakao/account_info">프로필</a>
       <a href="/oauth/kakao/logout">로그아웃</a>
       <a href="/oauth/kakao/unlink">인증 삭제</a>
-      <a href="/oauth/login/user_info">소셜로그인</a>
     </div>
     <div>
       <H1>구글 로그인</H1>
       <a href="/oauth/google">구글 로그인</a>
-      <a href="/oauth/google/account_info">구글 프로필</a>
       <a href="/oauth/google/logout">구글 로그아웃</a>
       <script src="https://accounts.google.com/gsi/client" async defer></script>
+    </div>
+    <div>
+      <H1>프로필 보기</H1>
+      <a href="/oauth/login/user_info">프로필</a>
     </div>
     <div>
       <H1>게시글</H1>
