success user info

--- a/views/pages/account_profile.ejs
+++ b/views/pages/account_profile.ejs
@@ -6,14 +6,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, font-src 'self'"
     />
-    <title>Test Social Login</title>
   </head>
   <body>
  
     <h1>프로필 프로필</h1>
     <article>
-      <div><h2><%= accounts_info.name %></h2></div>
-      <img src="<%= accounts_info.picture %>"></img>
+      <div><h2><%= account_info.name %></h2></div>
+      <img src="<%= account_info.picture %>"></img>
     </article>
   </body>
 </html>
